# mcool

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
common/: OrderedDict.h  StreamMisc.h
descriptions/: ast.td  parser.bison  scanner.flex
examples/: factorial.cl  fibonacci.cl
examples/scanner/: example-1.cl
mcool/: CMakeLists.txt
mcool/compiler/: Misc.h  SymbolTable.h
mcool/compiler/CodeGen/: BaseBuilder.h  BuiltinMethodsBuilder.cpp  BuiltinMethodsBuilder.h  CodeBuilder.cpp  CodeBuilder.h  CodeEmitter.cpp  CodeGenDriver.cpp  Initializer.h  Misc.h
mcool/compiler/Descriptions/: scanner.flex
mcool/compiler/Parser/: AstTree.cpp
mcool/compiler/Semant/: EntryPointChecker.cpp  EntryPointChecker.h  TypeDriver.cpp
mcool/compiler/Semant/TypeChecker/: EnvironmentsBuilder.cpp
mcool/compiler/Types/: Environment.h  TypeBuilder.cpp  TypeBuilder.h
mcool/src/: Context.h  Misc.cpp
mcool/src/CodeGen/: BaseBuilder.h  BuiltinMethodsBuilder.cpp  BuiltinMethodsBuilder.h  CodeBuilder.cpp  CodeBuilder.h  CodeEmitter.cpp  CodeGenDriver.h  Definitions.h  Environment.h  Initializer.cpp  Initializer.h  Misc.h
mcool/src/Descriptions/: ast.td  parser.bison
mcool/src/Parser/: AstTree.cpp  Loc.h  ParserDriver.cpp
mcool/src/Printers/: DotPrinter.h
mcool/src/Semant/: TypeDriver.h
mcool/src/Semant/TypeChecker/: Error.h  InheritanceGraphBuilder.h  TypeChecker.cpp
mcool/src/Types/: Environment.h  InheritanceGraph.cpp  InheritanceGraph.h  SymbolTable.h  Types.cpp  Types.h
mcool/table-gen/ast/: AstCodeEmitter.cpp  AstCodeEmitter.h  AttributeBuilder.cpp  CMakeLists.txt  InheritanceBuilder.h  InheritanceTree.h  Misc.cpp  PrettyTreePrinter.cpp  VisitorCodeEmitter.cpp  main.cpp
mcool/tablegen/: CMakeLists.txt
mcool/tablegen/ast/: InheritanceBuilder.cpp
mcool/tests/parser/: Classes.cpp  ErrorHandling.cpp  LetExprs.cpp  TestAstTokens.h  TestParserVisitor.h
mcool/tests/scanner/: Comments.cpp  ObjectIdentifiers.cpp  Programs.cpp  auxiliary.h
mcool/tests/semant/: Inheritance.cpp  auxiliary.h
src/: AstTree.h  Context.h  DotPrinter.h  Loc.h  MemoryManagement.cpp  MemoryManagement.h  MemoryManager.cpp  MemoryManager.h  Misc.cpp  Misc.h  ParserDriver.cpp  ParserDriver.h  Printer.h  Scanner.h  TypeDriver.cpp  TypeDriver.h  main.cpp  scanner.h
src/CodeGen/: BaseBuilder.h  BuiltinMethodsBuilder.cpp  CodeGenDriver.cpp  CodeGenDriver.h  Misc.h
src/Descriptions/: parser.bison
src/Parser/: AstTree.cpp  AstTree.h  Loc.cpp  ParserDriver.cpp  ParserDriver.h
src/Semant/: Definitions.h  TypeDriver.cpp
src/Semant/TypeChecker/: EnvironmentsBuilder.h  InheritanceGraphBuilder.cpp  InheritanceGraphBuilder.h  TypeChecker.cpp  TypeChecker.h
src/Semant/Types/: Environment.h  InheritanceGraph.cpp  InheritanceGraph.h  SymbolTable.h  TypeBuilder.cpp  TypeBuilder.h  Types.cpp  Types.h
src/Types/: InheritanceGraph.cpp  InheritanceGraph.h  SymbolTable.h  TypeBuilder.cpp  TypeBuilder.h  Types.cpp  Types.h
src/printers/: DotPrinter.h  Printer.h
src/semant/: Types.h
table-gen/: CMakeLists.txt
table-gen/ast/: AstCodeEmitter.cpp  AstCodeEmitter.h  AstType.h  AttributeBuilder.h  CMakeLists.txt  Generate.cpp  Generate.h  GeneratorAux.cpp  GeneratorAux.h  InheritanceBuilder.cpp  InheritanceTreeVisitor.h  Misc.cpp  Misc.h  PrettyTreePrinter.h  VisitorCodeEmitter.h  main.cpp
table-gen/examples/: simple.td
tests/: CMakeLists.txt
tests/parser/: Classes.cpp  ControlFlowExprs.cpp  ErrorHandling.cpp  LetExprs.cpp  Members.cpp  Methods.cpp  Simple.cpp  SimpleExprs.cpp  TestAstTokens.h  TestParserVisitor.h  auxiliary.h
tests/scanner/: Comments.cpp  Keywords.cpp  NumericalLiterals.cpp  ObjectIdentifiers.cpp  Programs.cpp  StringLiterals.cpp  Types.cpp  auxiliary.h
tests/semant/: TypeChecking.cpp  auxiliary.h  inheritance.cpp
